--- a/foundations/intro-to-css/03-grouping-selectors/style.css
+++ b/foundations/intro-to-css/03-grouping-selectors/style.css
@@ -1,1 +1,14 @@
-/* Add CSS Styling */
+.links,
+.rechts {
+    font-size: 28px;
+    font-family: Helvetica, "Times New Roman", sans-serif;
+}
+
+.links {
+    background-color: black;
+    color: white;
+}
+
+.rechts {
+    background-color: yellow;
+}
