--- a/foundations/block-and-inline/02-margin-and-padding-2/style.css
+++ b/foundations/block-and-inline/02-margin-and-padding-2/style.css
@@ -1,27 +1,38 @@
 body {
-  background: #eee;
-  font-family: sans-serif;
+    background: #eee;
+    font-family: sans-serif;
 }
 
 .card {
-  width: 400px;
-  background: #fff;
-  margin: 16px auto;
+    width: 400px;
+    background: #fff;
+    margin: 10px auto;
+    padding: 10px;
 }
 
 .title {
-  background: #e3f4ff;
+    background: #e3f4ff;
+    padding: 10px;
+    font-size: 16px;
 }
 
 .content {
-  background: #e3f4ff;
+    background: #e3f4ff;
+    padding: 10px;
+    margin: 10px auto;
 }
 
 .button-container {
-  background: #e3f4ff;
+    background: #e3f4ff;
+    padding: 10px;
+    text-align: center;
+    margin: 10px auto;
 }
 
 button {
-  background: white;
-  border: 1px solid #eee;
+    background: white;
+    border: 1px solid #eee;
+    padding: 8px 25px;
+    display: block;
+    margin: 0px auto;
 }
